Configure environment variables and enhance API integration
- Added support for environment variables using react-native-dotenv.
- Updated Babel configuration to include dotenv module.
- Modified API client initialization to use environment variable for API URL.
- Included new TypeScript definition for environment variables.
- Updated AndroidManifest.xml for network security configuration.

--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -22,7 +22,8 @@
   },
   "include": [
     "src/**/*",
-    "shared/**/*"
+    "shared/**/*",
+    "src/config/env.d.ts"
   ],
   "exclude": [
     "node_modules",
