--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,9 +37,11 @@
     "@types/react": "^18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.3.3"
   },
