Update backend deployment workflow, enhance mobile app configuration, and add test script
- Modified GitHub Actions workflow to cache npm dependencies for faster builds.
- Updated package.json to include a new test script for JWKS utility.
- Added optional deep link intent filter in AndroidManifest.xml for OAuth redirects.
- Integrated Amplify configuration in the mobile app startup process.
- Extended TypeScript definitions for environment variables to include optional redirect URI for OAuth flows.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "eslint . --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "test:jwks": "tsx src/utils/testJWKS.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
